@@ -452,3 +452,9 @@
 - Added Incendia Agave to the loot table of Scalding Elemental for the quest Sacred Fire.
 - Added Incendia Agave to the loot table of Boiling Elemental for the quest Sacred Fire.
 - Updated the flags of Incendia Agave to allow every member of a group to loot it.
+- Added Rocket Car Parts to the loot table of Scorpid Reaver for the quest Rocket Car Parts.
+- Added Rocket Car Parts to the loot table of Sparkleshell Tortoise for the quest Rocket Car Parts.
+- Added Rocket Car Parts to the loot table of Saltstone Basilisk for the quest Rocket Car Parts.
+- Added Rocket Car Parts to the loot table of Salt Flats Scavenger for the quest Rocket Car Parts.
+- Added Rocket Car Parts to the loot table of Salt Flats Vulture for the quest Rocket Car Parts.
+- Updated the flags of Rocket Car Parts to allow every member of a group to loot it.
